# Eth24_TrailBlazers

./: .env.example  .gitignore  CONTRIBUTING.md  License  README.md  makefile  pyproject.toml
ai01/: __init__.py
ai01/agent/: __init__.py  _exceptions.py  _models.py  agent.py
ai01/huddle/: rtc.py
ai01/providers/: _api.py
ai01/providers/Anthropic/: __init__.py  audio_track.py  textmodel.py
ai01/providers/Anthropic/realtime/: __init__.py  _api.py  _exceptions.py  conversation.py  realtime_model.py
ai01/providers/openai/: __init__.py  audio_track.py
ai01/providers/openai/realtime/: __init__.py  _api.py  _exceptions.py  conversation.py  realtime_model.py
ai01/rtc/: __init__.py  audio_resampler.py  rtc.py
ai01/utils/: emitter.py  socket.py
example/chatbot/: main.py  main_anthropic.py  main_trading_2.py  main_trading_bot.py  package-lock.json  prompt.py
example/chatbot/myenv/: pyvenv.cfg
examples/Chatbot/: chatbot.py
thisIsLit/: output.txt  package.json  tsconfig.json
thisIsLit/src/: client.js  client.ts  index.js  index.ts  litAction.js  litAction.ts  server.js  server.ts
